--- a/env/.env
+++ b/env/.env
@@ -1,14 +1,9 @@
 //Definimos las variables
-
-DB_HOST = localhost
-DB_USER = MaxiTours
-DB_PASS = ViajesMaxiSeguros2023+
-DB_DATABASE = SIR
-
-JWT_SECRET = SECRET_KEY
-
-
-jwt_expires = 90d
-
-
-cookie_expires = 90
+DB_SOCKET=/var/run/mysqld/mysqld.sock
+DB_HOST=localhost
+DB_USER=maxitours
+DB_PAS=ViajesMaxiSeguros2023+
+DB_DATABASE=SIR
+JWT_SECRET=SECRET_KEY
+jwt_expires=90d
+cookie_expires=90
